--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,24 +28,27 @@ jobs:
             source ~/.profile
 
             # Navigate to project directory
-            cd /app/pfa
+            cd /apps/pfa
 
             # Update repository
             git pull "https://cupkdev:${{ secrets.GITHUB_TOKEN }}@github.com/cupancurkasih/pfa.git" main
 
-            # Build Docker image
-            docker build --tag pfa-docker -f Dockerfile .
+            # Docker compose down
+            sudo docker-compose down
+            
+            # Docker compose build
+            docker-compose up -d
 
-            # Stop existing container if running
-            docker stop pfa-docker || true
-            docker rm pfa-docker || true
+            # # Stop existing container if running
+            # docker stop pfa-docker || true
+            # docker rm pfa-docker || true
 
-            # Run new container
-            docker run -d \
-              --name pfa-docker \
-              --restart always \
-              -p 5123:5123 \
-              pfa-docker
+            # # Run new container
+            # docker run -d \
+            #   --name pfa-docker \
+            #   --restart always \
+            #   -p 5123:5123 \
+            #   pfa-docker
             
             # Check container status
             docker ps | grep pfa-container
