--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,27 +33,24 @@ jobs:
             # Update repository
             git pull "https://cupkdev:${{ secrets.GITHUB_TOKEN }}@github.com/cupancurkasih/pfa.git" main
 
-            # Docker compose down
-            sudo docker-compose down
-            
-            # Docker compose build
-            docker-compose up -d
+            # Build Docker image
+            sudo docker build --tag pfa-docker .
 
             # # Stop existing container if running
-            # docker stop pfa-docker || true
-            # docker rm pfa-docker || true
+            sudo docker stop pfa-docker || true
+            sudo docker rm pfa-docker || true
 
             # # Run new container
-            # docker run -d \
-            #   --name pfa-docker \
-            #   --restart always \
-            #   -p 5123:5123 \
-            #   pfa-docker
+            sudo docker run -d \
+              --name pfa-docker \
+              --restart always \
+              -p 5123:5123 \
+              pfa-docker
             
             # Check container status
-            docker ps | grep pfa-container
+            sudo docker ps | grep pfa-container
 
             # Clean up unused images to free disk space
-            docker image prune -f
+            sudo docker image prune -f
 
             echo "Deployment completed successfully!"
